fix: hide overflowing header background

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
 body {
 	font-size: 18px;
 	font-family: "Playfair Display";
+	overflow-x: hidden;
 }
 
 h1,
